<resources>

    <string name="app_name">ZxingPoC</string>
    <string name="menu_settings">Settings</string>
    <string name="Scan_QR_Code">Scan QR Code</string>
    <string name="ENCRYPT">Encrypt</string>
    <string name="title_activity_main">QR Color</string>
    <string name="title_activity_display_scanned_qrcode">Display Scanned QR Code</string>
    <string name="Encrypt_Hint">Message to Encrypt</string>
    <string name="password_hint">Enter Password</string>
    <string name="title_activity_color_prompt">Color Prompt</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_color_chooser">ColorChooser</string>
	<string name="RED">RED</string>
	<string name="ORANGE">ORANGE</string>
	<string name="YELLOW">YELLOW</string>
	<string name="GREEN">GREEN</string>
	<string name="INDIGO">INDIGO</string>
	<string name="VIOLET">VIOLET</string>
	<string name="BLACK">BLACK</string>
	<string name="WHITE">WHITE</string>
	<string name="BLUE">BLUE</string>
	
	<string name="Get_Encryption_Key">Get Encryption Key</string>
	<string name="Encrypt_Message">Encrypt your message here.</string>
	
	<color name="black">#000000</color>
	
    <string name="color_prompt1">Choose Bottom Left Color</string>
 	<string name="color_prompt2">Choose Top Left Color</string>
 	<string name="color_prompt3">Choose Top Right Color</string>
    <string-array name="color_arrays">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Black</item>
        <item>Violet</item>
        <item>Brown</item>
        <item>Fushia</item>
        <item>Orange</item>
        <item>Turquoise</item>
    </string-array>
</resources>